# This file is part of pom-ng.
# Copyright (C) 2010 Guy Martin <gmsoft@tuxicoman.be>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA



BASE_HDRS = pom-ng/base.h pom-ng/core.h pom-ng/mod.h pom-ng/pomlog.h pom-ng/packet.h pom-ng/proto.h pom-ng/conntrack.h pom-ng/timer.h pom-ng/registry.h
INPUT_HDRS = pom-ng/input.h pom-ng/input_client.h
PTYPE_HDRS = pom-ng/ptype.h pom-ng/ptype_bool.h pom-ng/ptype_ipv4.h pom-ng/ptype_mac.h pom-ng/ptype_string.h pom-ng/ptype_uint8.h pom-ng/ptype_uint16.h pom-ng/ptype_uint32.h
OTHER_HDRS = docsis.h

nobase_include_HEADERS = $(BASE_HDRS) $(INPUT_HDRS) $(PTYPE_HDRS) $(OTHER_HDRS)
